--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,33 +1,12 @@
-@import 'utils/libs';
-@import 'utils/vars';
-@import 'utils/mixins';
-@import 'utils/fonts';
-@import 'utils/reset';
 
 html {
-  line-height: $mainLineHeight;
-  font-size: $mainFontSize;
-  color: $mainFontColor;
   height: 100%;
-  @media screen and (max-width: $desktopWidth) {
-    font-size: 16px;
-  }
-  @media screen and (max-width: $tableWidth) {
-    font-size: 15px;
-  }
-  @media screen and (max-width: $phoneWidth) {
-    font-size: 14px;
-  }
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: $mainFont;
-  font-size: $mainFontSize;
-  font-weight: $mainFontWeight;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
 }
 
 *,
@@ -36,17 +15,10 @@ body {
   box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 ul,
@@ -56,51 +28,341 @@ li {
   list-style-type: none;
 }
 
-section,
-.section {
-  position: relative;
-  padding: 40px 0;
-  @media screen and (max-width: $smDesktopWidth) {
-    padding: 36px 0;
-  }
-  @media screen and (max-width: $tableWidth) {
-    padding: 28px 0;
-  }
-  @media screen and (max-width: $phoneWidth) {
-    padding: 20px 0;
-  }
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  min-height: 100vh;
-  min-width: 100vh;
-}
-
-.content-wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
 
 .container {
+  max-width: 1440px;
   width: 100%;
-  flex: 0 0 auto;
   position: relative;
   margin: 0 auto;
-  max-width: $desktopWidth;
-  @media screen and (max-width: $smDesktopWidth) {
-    max-width: $tableWidth;
+}
+
+.header__inner{
+  height: 252px;
+  a{
+    color:#fff;
   }
-  @media screen and (max-width: $tableWidth) {
-    max-width: $phoneWidth;
-  }
-  @media screen and (max-width: $phoneWidth) {
-    max-width: $smPhoneWidth;
+  position: relative;
+}
+
+.header__podlojka{
+  background-color: rgba(31, 32, 33, 0.79);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+}
+
+.header__content{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+  padding: 40px 130px 66px;
+  color:#fff;
+}
+
+.header__top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__logo{
+  width: 78px;
+  height: 50px;
+  background-position: center;
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
+.menu{
+  margin-left: 130px;
+  li{
+    display: inline-block;
+    a{
+      font-size: 18px;
+      line-height: 22px;
+    }
+    &+li{
+      margin-left: 35px;
+    }
   }
 }
 
-// Modules:
-// example: @import "modules/my-module.scss";
+.header__top-box{
+  display: flex;
+}
+
+.header__phone{
+  text-align: right;
+}
+
+.header__phone-number{
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 700;
+}
+
+.header__phone-text{
+  font-size: 18px;
+  line-height: 23px;
+}
+.header__bottom-text{
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 46px;
+  margin-top: 36px;
+}
+
+.animals__inner{
+  padding: 0px 130px;
+}
+
+.content__sortbox{
+  display: flex;
+  padding: 38px 0px;
+}
+
+.sortbox-text{
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 700;
+}
+
+.price__sortbox{
+  display: flex;
+  align-items: center;
+  margin-left: 48px;
+  cursor: pointer;
+}
+
+.price__arrow{
+  width: 15px;
+  height: 9px;
+  margin-left: 14px;
+}
+
+.old__sortbox{
+  display: flex;
+  align-items: center;
+  margin-left: 55px;
+  cursor: pointer;
+}
+
+.animal__img-box{
+  width: 100%;
+  height: auto;
+  img{
+    max-width: 380px;
+    width: 100%;
+    height: auto;
+  }
+  position: relative;
+
+}
+
+.animal__sale-heart{
+  position: absolute;
+  top: 37px;
+  right: 32px;
+}
+
+.animal__sale{
+  position: absolute;
+  top: 34px;
+  left: 38px;
+  width: 78px;
+  height: 39px;
+  background-color:#E52D2D;
+  border-radius: 10px;
+  padding: 9px 0px;
+  text-align: center;
+  color: #fff;
+}
+
+.animal__infobox{
+  background-color: #F3F3F3;
+  padding: 29px;
+}
+
+.animal__item{
+  max-width: 380px;
+  width: 100%;  
+  margin-bottom: 27px;
+}
+
+.animal__name,
+.animal__price{
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 700;
+}
+
+.animal__pror-box{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+
+.animal__color{
+  max-width: 89px;
+  padding-left: 18px;
+  border-left: 4px solid #6EBBD3;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.animal__old,
+.animal__hand{
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 700;
+}
+
+.animal__old-text,
+.animal__hand-text{
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.animal__link{
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 700;
+  color:#fff;
+  text-align: center;
+  height: auto;
+  max-width: 380px;
+  width: 100%;
+  background-color: #6EBBD3;
+  padding: 21px 0px;
+  border-radius: 0px 0 10px 10px;
+}
+
+.animals__item-box{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 41px;
+}
+
+.animals__list-link{
+  width: 380px;
+  height: 65px;
+  border: 1px solid #CACACA;
+  border-radius: 10px;
+  padding: 24px;
+  text-align: center;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.top__button-box{
+  position: relative;
+  height: 83px;
+}
+
+.top__button{
+  position: absolute;
+  top: -10px;
+  right: 0px;
+  margin: 0 auto;
+  width: 59px;
+  height: 59px;
+  background: #6EBBD3;
+  padding: 23px 20px;
+  svg{
+    fill : #fff;
+  }
+}
+
+.footer__inner{
+  padding: 83px 130px 92px;
+  height: 312px;
+  background: #1F2021;
+  display: flex;
+  color: #fff;
+}
+
+.footer__content-text{
+  font-size: 48px;
+  line-height: 59px;
+  font-weight: 700;
+  margin-bottom: 27px;
+}
+
+.footer__content-comment{
+  font-size: 28px;
+  max-width: 401px;
+}
+
+.footer__link-box{
+  margin-left: 54px;
+  form{
+    .email-box{
+      display: flex;
+      align-items: center;
+      margin-bottom: 24px;
+      input{
+        width: 300px;
+        height: 65px;
+        background: #FFFFFF;
+        border-radius: 10px;
+        padding: 22px 10px 26px 33px;
+        &:placeholder{
+          font-size: 14px;
+          line-height: 17px;
+          color: #000;
+        }
+        outline: none;
+      }
+      button{
+        width: 250px;
+        height: 65px;
+        background: #6EBBD3;
+        border-radius: 10px;
+        font-size: 14px;
+        line-height: 17px;
+        font-weight: 700;
+        margin-left: 16px;
+        color:#fff;
+      }
+    }
+    label{
+      color:#fff;
+      font-size:14px;
+      line-height: 17px;
+      input{
+        margin-right: 18px;
+      }
+    }
+    
+  }
+}
+
+.menu__btn{
+  display: none;
+  padding: 0px 4px;
+  cursor: pointer;
+  div{
+    width: 30px;
+    height: 4px;
+    background-color: #fff;
+    margin-bottom: 5px;
+  }
+}
+
+.hide{
+  display: none;
+}
+
+.show{
+  display: block;
+}
+
+@import 'utils/media';
